# codility-2023

./: CMakeLists.txt  README.md
lesson1/: binary_gap.cpp
lesson2/: cyclic_rotation.cpp  odd_occurrences_in_array.cpp
lesson3/: frog_jmp.cpp  perm_missing_elem.cpp  tape_equilibrium.cpp
lesson4/: frog_river_one.cpp  max_counters.cpp  missing_integer.cpp  perm_check.cpp
lesson5/: count_div.cpp  genomic_range_query.cpp  min_avg_two_slice.cpp  passing_cars.cpp
lesson6/: distinct.cpp  max_product_of_three.cpp
tasks/: task1.cpp  task2.cpp
